# peoplecount

./: CMakeLists.txt  readme.txt
camera160/include/: Camera160.hpp
camera160/src/: Camera160.cpp
communication/include/: Communication.hpp  Connection.hpp  constants.h
communication/src/: Communication.cpp  Connection.cpp
include/: Camera.hpp  MJPGStreamer.h  ToFImage.hpp  camera_info.h  common.h  dgp.h  lora.hpp  people_counting.h  utils.h
serial/include/: SerialConnection.hpp
serial/src/: SerialConnection.cpp
src/: Camera.cpp  MJPGStreamer.cpp  StreamBuffer.cpp  StreamBuffer.h  ToFImage.cpp  dgp.cpp  led.cpp  led.h  lora.cpp  main.cpp  people_counting.cpp  thread_safe.h  tracking.cpp  tracking.h  utils.cpp  utils.h
src/sws/: client_http.hpp  server_http.hpp  utility.hpp
util/include/: color.hpp  util.h
util/src/: color.cpp  util.cpp
web/: aws-configuration.js  index (another copy).html  index (copy).html  index.html
